--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
 		</tr>
 	</table>
 	<ul>
-		<li><a href="#home">Home</a></li>
+		<li><a href="index.html">Home</a></li>
 		<li><a href="#beverage">Beverages</a></li>
 		<li><a href="#burger">Burgers</a></li>
 		<li><a href="#fries">Fries</a></li>
 	</ul>
 
-	<h1><a name="home">About Us</a></h1><a class="top" href="#top">Back to top of page</a><br><br>
+	<h1>About Us</h1><a class="top" href="#top">Back to top of page</a><br><br>
 	<table>
 		<tr>
 			<td> <p>Rogers Best Burgers believes in farm to table products. We believe in giving people the experience of how things use to be. It is an experience like no others. Where you get highly styled photos of products from our competitors, we believe in giving you raw ingredients the honest truth. No filters. No BS. Just an experience that your great great great grandfather had to deal with as a pioneer. </p>
@@ -204,7 +204,7 @@
 				<img src="./images/fries/RussetSpud.jpg" alt="Russet Spud Fries">
 			</td>
 			<td>
-				<p>Some Text</p>
+				<p>The tradiontional russet spud fries brings me back to when I was a child. We would eat in a sit down restaraunte. The would have a waitress ask you what you where eating. I always wanted steak fries. The ones that made you feel like you were eating a baked potato. It was a meal in and of itself.</p>
 
 				<a href="" class="call-to-action">Add to Cart</a>
 			</td>
@@ -218,7 +218,7 @@
 				<img src="./images/fries/RedSPud.jpg" alt="Red Spud Fries">
 			</td>
 			<td>
-				<p>Some Text</p>
+				<p>Red spuds seem to be a little bit of a stretch. Red potatoes are great in potato salad. We have it on our menu because cousin Sally went to New York City. She had it there and so we have it here.</p>
 
 				<a href="" class="call-to-action">Add to Cart</a>
 			</td>
@@ -232,7 +232,7 @@
 				<img src="./images/fries/Yams.jpg" alt="Yam Fries">
 			</td>
 			<td>
-				<p>Some Text</p>
+				<p>Yam Fries will really surprise you. Your senses will be confused. The first time that I tried these wonderful delights. I thought to myself is it Thanksgiving and where is the marshmellows? You maybe hooked after this first time trying it. It really is a guilty pleasure.</p>
 
 				<a href="" class="call-to-action">Add to Cart</a>
 			</td>
