--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
         <br>
 
         <label for="message">Comments:</label>
-        <input type="text" name="message" id="message" placeholder="How may we help you?">
+        <textarea name="message" id="message" rows="4" cols="50" placeholder="How may we help you?"></textarea>
         <br>
 
         <button>Submit</button>
