--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 		<li><a href="#beverage">Beverages</a></li>
 		<li><a href="#burger">Burgers</a></li>
 		<li><a href="#fries">Fries</a></li>
+		<li><a href="contact.html">Contact Us</a></li>
 	</ul>
 
 	<h1>About Us</h1><a class="top" href="#top">Back to top of page</a><br><br>
