--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		h3,
 		h4,
 		h5,
-		h6{
+		h6 {
 			color: #90A955;
 		}
 
@@ -41,7 +41,7 @@
 			color: #ECF39E;
 		}
 
-		
+
 		.call-to-action {
 			color: #4F772D;
 			background-color: #ECF39E;
@@ -54,8 +54,11 @@
 		}
 
 
-		.header { float: right; }
-		.top { 
+		.header {
+			float: right;
+		}
+
+		.top {
 			color: #ECF39E;
 		}
 
@@ -67,8 +70,17 @@
 			background-color: #90A955;
 		}
 
+		ol {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+			background-color: #90A955;
+		}
+
 		li {
 			float: left;
+			color: #ECF39E;
 		}
 
 		li a {
@@ -106,13 +118,19 @@
 	<h1>About Us</h1><a class="top" href="#top">Back to top of page</a><br><br>
 	<table>
 		<tr>
-			<td> <p>Rogers Best Burgers believes in farm to table products. We believe in giving people the experience of how things use to be. It is an experience like no others. Where you get highly styled photos of products from our competitors, we believe in giving you raw ingredients the honest truth. No filters. No BS. Just an experience that your great great great grandfather had to deal with as a pioneer. </p>
+			<td>
+				<p>Rogers Best Burgers believes in farm to table products. We believe in giving people the experience of
+					how things use to be. It is an experience like no others. Where you get highly styled photos of
+					products from our competitors, we believe in giving you raw ingredients the honest truth. No
+					filters. No BS. Just an experience that your great great great grandfather had to deal with as a
+					pioneer. </p>
 			</td>
 		</tr>
-	</table>	
+	</table>
 
 	<h1><a name="beverage">Beverages</a></h1>
 	<a class="top" href="#top">Back to top of page</a><br><br>
+	<h2>For you</h2>
 	<table>
 		<tr>
 			<td>
@@ -120,7 +138,18 @@
 				<img src="./images/beverage/Milk.jpg" alt="Fresh Squeezed Milk">
 			</td>
 			<td>
-				<p>Growing up on the farm, we had to milk the cows at the break of dawn. We have a local cow Betsy and her friends. They are milked daily. You can even meet Betsy and Gals. They eat alfalfa grass hay and barley grains.</p>
+				<p>Growing up on the farm, we had to milk the cows at the break of dawn. We have a local cow Betsy and
+					her friends. They are milked daily. You can even meet Betsy and Gals. They eat alfalfa grass hay and
+					barley grains.
+					<br><br>Cow Names<br>
+				<ol>
+					<li>Betsy&nbsp;</li>
+					<li>Sally&nbsp;</li>
+					<li>Sue&nbsp;</li>
+					<li>Fancy&nbsp;</li>
+					<li>Gina&nbsp;</li>
+				</ol>
+				</p>
 
 				<a href="" class="call-to-action">Add to Cart</a>
 			</td>
@@ -134,7 +163,10 @@
 				<img src="./images/beverage/Water.jpeg" alt="Rushing River Water">
 			</td>
 			<td>
-				<p>Uncle Jed would cross this rushing river daily in a boat until the bridge was put in by the ranch. It would take him an hour and a half communite. Now Uncle Jed spends the time on the boat to get our Rushing River Water. He finds that the freshes, puriest water is in the middle of the river. He is now spending that hour communte to find you the best river water.</p>
+				<p>Uncle Jed would cross this rushing river daily in a boat until the bridge was put in by the ranch. It
+					would take him an hour and a half communite. Now Uncle Jed spends the time on the boat to get our
+					Rushing River Water. He finds that the freshes, puriest water is in the middle of the river. He is
+					now spending that hour communte to find you the best river water.</p>
 
 				<a href="" class="call-to-action">Add to Cart</a>
 			</td>
@@ -148,7 +180,9 @@
 				<img src="./images/beverage/SparklingWater.jpeg" alt="Sparkling Water">
 			</td>
 			<td>
-				<p>We had a foreign exchange student last year. He did not have to live on a farm. We decided that we could add a moden convience of Sparkling Water. It has a bitter taste and it will grow on you over time.</p>
+				<p>We had a foreign exchange student last year. He did not have to live on a farm. We decided that we
+					could add a moden convience of Sparkling Water. It has a bitter taste and it will grow on you over
+					time.</p>
 
 				<a href="" class="call-to-action">Add to Cart</a>
 			</td>
@@ -164,7 +198,8 @@
 				<img src="./images/burger/Beans.jpg" alt="Plant Based">
 			</td>
 			<td>
-				<p>Now days. Plant based burgers are the in thing so overcourse we will have it on the menu. We have the raw essence of the plant based burger. You can help harvest your own food.</p>
+				<p>Now days. Plant based burgers are the in thing so overcourse we will have it on the menu. We have the
+					raw essence of the plant based burger. You can help harvest your own food.</p>
 				<a href="" class="call-to-action">Add to Cart</a>
 			</td>
 		</tr>
@@ -177,7 +212,10 @@
 				<img src="./images/burger/chicken.jpg" alt="Free Ranged Chicken">
 			</td>
 			<td>
-				<p>We have fresh free ranged chickens available for our chicken burgers. We are able to sear your burger when cooking so you can have the juiciest burger know to mankind. You will curse your parents for not giving you this experience sooner. By the way, we can fry an egg from our chickens and place the fried egg on any of our burgers.</p>
+				<p>We have fresh free ranged chickens available for our chicken burgers. We are able to sear your burger
+					when cooking so you can have the juiciest burger know to mankind. You will curse your parents for
+					not giving you this experience sooner. By the way, we can fry an egg from our chickens and place the
+					fried egg on any of our burgers.</p>
 				<a href="" class="call-to-action">Add to Cart</a>
 			</td>
 		</tr>
@@ -190,7 +228,9 @@
 				<img src="./images/burger/Buffalo.png" alt="Free Ranged Buffalo">
 			</td>
 			<td>
-				<p>Have you ever wanted to hunt your own food? You should go to a guide hunt in Arizona or Utah. We will not give you this experience here. We do have a buffalo farm where we cull the buffaloes for consumption. It is your lucky day. We have a raw chunk of meat ready to fry for you.</p>
+				<p>Have you ever wanted to hunt your own food? You should go to a guide hunt in Arizona or Utah. We will
+					not give you this experience here. We do have a buffalo farm where we cull the buffaloes for
+					consumption. It is your lucky day. We have a raw chunk of meat ready to fry for you.</p>
 				<a href="" class="call-to-action">Add to Cart</a>
 			</td>
 		</tr>
@@ -205,7 +245,9 @@
 				<img src="./images/fries/RussetSpud.jpg" alt="Russet Spud Fries">
 			</td>
 			<td>
-				<p>The tradiontional russet spud fries brings me back to when I was a child. We would eat in a sit down restaraunte. The would have a waitress ask you what you where eating. I always wanted steak fries. The ones that made you feel like you were eating a baked potato. It was a meal in and of itself.</p>
+				<p>The tradiontional russet spud fries brings me back to when I was a child. We would eat in a sit down
+					restaraunte. The would have a waitress ask you what you where eating. I always wanted steak fries.
+					The ones that made you feel like you were eating a baked potato. It was a meal in and of itself.</p>
 
 				<a href="" class="call-to-action">Add to Cart</a>
 			</td>
@@ -219,7 +261,8 @@
 				<img src="./images/fries/RedSPud.jpg" alt="Red Spud Fries">
 			</td>
 			<td>
-				<p>Red spuds seem to be a little bit of a stretch. Red potatoes are great in potato salad. We have it on our menu because cousin Sally went to New York City. She had it there and so we have it here.</p>
+				<p>Red spuds seem to be a little bit of a stretch. Red potatoes are great in potato salad. We have it on
+					our menu because cousin Sally went to New York City. She had it there and so we have it here.</p>
 
 				<a href="" class="call-to-action">Add to Cart</a>
 			</td>
@@ -233,7 +276,9 @@
 				<img src="./images/fries/Yams.jpg" alt="Yam Fries">
 			</td>
 			<td>
-				<p>Yam Fries will really surprise you. Your senses will be confused. The first time that I tried these wonderful delights. I thought to myself is it Thanksgiving and where is the marshmellows? You maybe hooked after this first time trying it. It really is a guilty pleasure.</p>
+				<p>Yam Fries will really surprise you. Your senses will be confused. The first time that I tried these
+					wonderful delights. I thought to myself is it Thanksgiving and where is the marshmellows? You maybe
+					hooked after this first time trying it. It really is a guilty pleasure.</p>
 
 				<a href="" class="call-to-action">Add to Cart</a>
 			</td>
@@ -241,5 +286,6 @@
 	</table>
 </body>
 <br><br>
-<footer> <small>&copy; Copyright 2020, Kohltfarber Corporation</small> </footer> 
+<footer> <small>&copy; Copyright 2020, Kohltfarber Corporation</small> </footer>
+
 </html>
