--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,6 @@
 			font-family: 'Josefin Sans', sans-serif;
 		}
 
-
 		h1,
 		h2,
 		h3,
@@ -41,6 +40,10 @@
 			color: #ECF39E;
 		}
 
+        label {
+			color:  #90A955;
+			font-family: 'Josefin Sans', sans-serif;
+		}
 		
 		.call-to-action {
 			color: #4F772D;
@@ -52,7 +55,6 @@
 		.logo {
 			width: 50px;
 		}
-
 
 		.header { float: right; }
 		.top { 
