--- a/contact.html
+++ b/contact.html
@@ -6,85 +6,8 @@
 	<meta property="og:title" content="Home | Downtown" />
 	<title>Rogers Best Burgers | Downtown</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-	<style type="text/css">
-		img {
-			width: 200px;
-		}
-
-		body {
-			background-color: #31572C;
-			font-family: 'Josefin Sans', sans-serif;
-		}
-
-		h1,
-		h2,
-		h3,
-		h4,
-		h5,
-		h6{
-			color: #90A955;
-		}
-
-		h1,
-		h2,
-		h3,
-		h4,
-		h5,
-		h6 a {
-			color: #90A955;
-		}
-
-
-		p {
-			color: #ECF39E;
-		}
-
-        label {
-			color:  #90A955;
-			font-family: 'Josefin Sans', sans-serif;
-		}
-		
-		.call-to-action {
-			color: #4F772D;
-			background-color: #ECF39E;
-			padding: 5px;
-			margin: 20px;
-		}
-
-		.logo {
-			width: 50px;
-		}
-
-		.header { float: right; }
-		.top { 
-			color: #ECF39E;
-		}
-
-		ul {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			background-color: #90A955;
-		}
-
-		li {
-			float: left;
-		}
-
-		li a {
-			display: block;
-			color: #ECF39E;
-			text-align: center;
-			padding: 16px;
-			text-decoration: none;
-		}
-
-		li a:hover {
-			background-color: #90A955;
-		}
-	</style>
+	<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Pangolin&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -98,6 +21,8 @@
 	</table>
 	<ul>
 		<li><a href="index.html">Home</a></li>
+		<li><a href="product.html">Product</a></li>
+		<li><a href="checkout.html">Shopping Cart</a></li>
 		<li><a href="contact.html">Contact Us</a></li>
     </ul>
     <br><br>
