--- a/index.html
+++ b/index.html
@@ -6,95 +6,8 @@
 	<meta property="og:title" content="Home | Downtown" />
 	<title>Rogers Best Burgers | Downtown</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-	<style type="text/css">
-		img {
-			width: 200px;
-		}
-
-		body {
-			background-color: #31572C;
-			font-family: 'Josefin Sans', sans-serif;
-		}
-
-
-		h1,
-		h2,
-		h3,
-		h4,
-		h5,
-		h6 {
-			color: #90A955;
-		}
-
-		h1,
-		h2,
-		h3,
-		h4,
-		h5,
-		h6 a {
-			color: #90A955;
-		}
-
-
-		p {
-			color: #ECF39E;
-		}
-
-
-		.call-to-action {
-			color: #4F772D;
-			background-color: #ECF39E;
-			padding: 5px;
-			margin: 20px;
-		}
-
-		.logo {
-			width: 50px;
-		}
-
-
-		.header {
-			float: right;
-		}
-
-		.top {
-			color: #ECF39E;
-		}
-
-		ul {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			background-color: #90A955;
-		}
-
-		ol {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			background-color: #90A955;
-		}
-
-		li {
-			float: left;
-			color: #ECF39E;
-		}
-
-		li a {
-			display: block;
-			color: #ECF39E;
-			text-align: center;
-			padding: 16px;
-			text-decoration: none;
-		}
-
-		li a:hover {
-			background-color: #90A955;
-		}
-	</style>
+	<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Pangolin&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -110,8 +23,10 @@
 	<ul>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="#beverage">Beverages</a></li>
+		<li><a href="#appetizer">Appetizers</a></li>
 		<li><a href="#burger">Burgers</a></li>
-		<li><a href="#fries">Fries</a></li>
+		<li><a href="product.html">Product</a></li>
+		<li><a href="checkout.html">Shopping Cart</a></li>
 		<li><a href="contact.html">Contact Us</a></li>
 	</ul>
 
@@ -119,7 +34,7 @@
 	<table>
 		<tr>
 			<td>
-				<p>Rogers Best Burgers believes in farm to table products. We believe in giving people the experience of
+				<p class="header">Rogers Best Burgers believes in farm to table products. We believe in giving people the experience of
 					how things use to be. It is an experience like no others. Where you get highly styled photos of
 					products from our competitors, we believe in giving you raw ingredients the honest truth. No
 					filters. No BS. Just an experience that your great great great grandfather had to deal with as a
@@ -134,24 +49,14 @@
 	<table>
 		<tr>
 			<td>
-				<h3>Fresh Squeezed Milk</h3>
-				<img src="./images/beverage/Milk.jpg" alt="Fresh Squeezed Milk">
+				<h3>Shakes</h3>
+				<img src="./images/beverage/shake.jpg" alt="Shakes">
 			</td>
 			<td>
-				<p>Growing up on the farm, we had to milk the cows at the break of dawn. We have a local cow Betsy and
-					her friends. They are milked daily. You can even meet Betsy and Gals. They eat alfalfa grass hay and
-					barley grains.
-					<br><br>Cow Names<br>
-				<ol>
-					<li>Betsy&nbsp;</li>
-					<li>Sally&nbsp;</li>
-					<li>Sue&nbsp;</li>
-					<li>Fancy&nbsp;</li>
-					<li>Gina&nbsp;</li>
-				</ol>
+				<p class="description">This milk shake is made with MILK, not ice cream! It's refreshing and healthy!
 				</p>
 
-				<a href="" class="call-to-action">Add to Cart</a>
+				<a href="product.html" class="call-to-action">Product Page</a>
 			</td>
 		</tr>
 		<tr>
@@ -159,16 +64,13 @@
 		</tr>
 		<tr>
 			<td>
-				<h3>Rushing River Water</h3>
-				<img src="./images/beverage/Water.jpeg" alt="Rushing River Water">
+				<h3>Hot Chocolate</h3>
+				<img src="./images/beverage/hot_chocolate.jpg" alt="Hot Chocolate">
 			</td>
 			<td>
-				<p>Uncle Jed would cross this rushing river daily in a boat until the bridge was put in by the ranch. It
-					would take him an hour and a half communite. Now Uncle Jed spends the time on the boat to get our
-					Rushing River Water. He finds that the freshes, puriest water is in the middle of the river. He is
-					now spending that hour communte to find you the best river water.</p>
+				<p class="description">Hot chocolate, also known as drinking chocolate, cocoa, and as chocolate tea in Nigeria, is a heated drink consisting of shaved chocolate, melted chocolate or cocoa powder, heated milk or water, and usually a sweetener. Hot chocolate may be topped with whipped cream or marshmallows.</p>
 
-				<a href="" class="call-to-action">Add to Cart</a>
+				<a href="product.html" class="call-to-action">Product Page</a>
 			</td>
 		</tr>
 		<tr>
@@ -176,15 +78,57 @@
 		</tr>
 		<tr>
 			<td>
-				<h3>Sparkling Water</h3>
-				<img src="./images/beverage/SparklingWater.jpeg" alt="Sparkling Water">
+				<h3>Smoothie</h3>
+				<img src="./images/beverage/smoothie.jpg" alt="Smoothie">
 			</td>
 			<td>
-				<p>We had a foreign exchange student last year. He did not have to live on a farm. We decided that we
-					could add a moden convience of Sparkling Water. It has a bitter taste and it will grow on you over
-					time.</p>
+				<p class="description">Spinach, kale, mango, pineapple, banana & fresh ginger (naturally sweetened)</p>
 
-				<a href="" class="call-to-action">Add to Cart</a>
+				<a href="product.html" class="call-to-action">Product Page</a>
+			</td>
+		</tr>
+	</table>
+
+	<h1><a name="appetizer">Appetizers</a></h1>
+	<a class="top" href="#top">Back to top of page</a><br><br>
+	<table>
+		<tr>
+			<td>
+				<h3>Bourgeois</h3>
+				<img src="./images/appetizer/bourgeois.jpg" alt="Bourgeois">
+			</td>
+			<td>
+				<p class="description">Idaho Russet homestyle fries flash fried in duck fat, garnished with Italian black truffle salt.</p>
+
+				<a href="product.html" class="call-to-action">Product Page</a>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">&nbsp;</td>
+		</tr>
+		<tr>
+			<td>
+				<h3>Roasted Brussels Sprouts</h3>
+				<img src="./images/appetizer/brussels.jpg" alt="Roasted Brussels Sprouts">
+			</td>
+			<td>
+				<p class="description">Fresh sprouts, fried, lightly salted and served with a side of house-made maple bacon jam.</p>
+
+				<a href="product.html" class="call-to-action">Product Page</a>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">&nbsp;</td>
+		</tr>
+		<tr>
+			<td>
+				<h3>Fries</h3>
+				<img src="./images/appetizer/fries.jpg" alt="Fries">
+			</td>
+			<td>
+				<p class="description">All fries are cooked in Non GMO Sunflower oil. Depending on the day, your fries will be cut regular, homestyle, curly, po-ball, or shoestring. Our fries are served au natural and therefore do not keep their heat, or crispness as long as the typical fry. For best quality, please arrive as close as possible to your pick up time. Currently State Street out of Yams 4-1-20.</p>
+
+				<a href="product.html" class="call-to-action">Product Page</a>
 			</td>
 		</tr>
 	</table>
@@ -194,29 +138,12 @@
 	<table>
 		<tr>
 			<td>
-				<h3>Plant Based</h3>
-				<img src="./images/burger/Beans.jpg" alt="Plant Based">
+				<h3>BFC Original</h3>
+				<img src="./images/burger/bfc_original.jpg" alt="BFC Original">
 			</td>
 			<td>
-				<p>Now days. Plant based burgers are the in thing so overcourse we will have it on the menu. We have the
-					raw essence of the plant based burger. You can help harvest your own food.</p>
-				<a href="" class="call-to-action">Add to Cart</a>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">&nbsp;</td>
-		</tr>
-		<tr>
-			<td>
-				<h3>Free Ranged Chicken</h3>
-				<img src="./images/burger/chicken.jpg" alt="Free Ranged Chicken">
-			</td>
-			<td>
-				<p>We have fresh free ranged chickens available for our chicken burgers. We are able to sear your burger
-					when cooking so you can have the juiciest burger know to mankind. You will curse your parents for
-					not giving you this experience sooner. By the way, we can fry an egg from our chickens and place the
-					fried egg on any of our burgers.</p>
-				<a href="" class="call-to-action">Add to Cart</a>
+				<p class="description">Spring mix, house-made garlic aioli, red onion gastrique, tomato.</p>
+				<a href="product.html" class="call-to-action">Product Page</a>
 			</td>
 		</tr>
 		<tr>
@@ -224,66 +151,29 @@
 		</tr>
 		<tr>
 			<td>
-				<h3>Free Ranged Buffalo</h3>
-				<img src="./images/burger/Buffalo.png" alt="Free Ranged Buffalo">
+				<h3>Classic</h3>
+				<img src="./images/burger/classic.jpg" alt="Classic">
 			</td>
 			<td>
-				<p>Have you ever wanted to hunt your own food? You should go to a guide hunt in Arizona or Utah. We will
-					not give you this experience here. We do have a buffalo farm where we cull the buffaloes for
-					consumption. It is your lucky day. We have a raw chunk of meat ready to fry for you.</p>
-				<a href="" class="call-to-action">Add to Cart</a>
+				<p class="description">Crisp lettuce, tomato, red onion, house-made pickles and smoked special sauce.</p>
+				<a href="product.html" class="call-to-action">Product Page</a>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">&nbsp;</td>
+		</tr>
+		<tr>
+			<td>
+				<h3>The BBQ</h3>
+				<img src="./images/burger/the_bbq.jpg" alt="The BBQ">
+			</td>
+			<td>
+				<p class="description">Blue cheese coleslaw, house made chips, barbecue sauce</p>
+				<a href="product.html" class="call-to-action">Product Page</a>
 			</td>
 		</tr>
 	</table>
-
-	<h1><a name="fries">Fries</a></h1>
-	<a class="top" href="#top">Back to top of page</a><br><br>
-	<table>
-		<tr>
-			<td>
-				<h3>Russet Spud Fries</h3>
-				<img src="./images/fries/RussetSpud.jpg" alt="Russet Spud Fries">
-			</td>
-			<td>
-				<p>The tradiontional russet spud fries brings me back to when I was a child. We would eat in a sit down
-					restaraunte. The would have a waitress ask you what you where eating. I always wanted steak fries.
-					The ones that made you feel like you were eating a baked potato. It was a meal in and of itself.</p>
-
-				<a href="" class="call-to-action">Add to Cart</a>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">&nbsp;</td>
-		</tr>
-		<tr>
-			<td>
-				<h3>Red Spud Fries</h3>
-				<img src="./images/fries/RedSPud.jpg" alt="Red Spud Fries">
-			</td>
-			<td>
-				<p>Red spuds seem to be a little bit of a stretch. Red potatoes are great in potato salad. We have it on
-					our menu because cousin Sally went to New York City. She had it there and so we have it here.</p>
-
-				<a href="" class="call-to-action">Add to Cart</a>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">&nbsp;</td>
-		</tr>
-		<tr>
-			<td>
-				<h3>Yam Fries</h3>
-				<img src="./images/fries/Yams.jpg" alt="Yam Fries">
-			</td>
-			<td>
-				<p>Yam Fries will really surprise you. Your senses will be confused. The first time that I tried these
-					wonderful delights. I thought to myself is it Thanksgiving and where is the marshmellows? You maybe
-					hooked after this first time trying it. It really is a guilty pleasure.</p>
-
-				<a href="" class="call-to-action">Add to Cart</a>
-			</td>
-		</tr>
-	</table>
+	
 </body>
 <br><br>
 <footer> <small>&copy; Copyright 2020, Kohltfarber Corporation</small> </footer>
