--- a/checkout.html
+++ b/checkout.html
@@ -5,25 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Home | Downtown" />
     <title>Rogers Best Burgers | Downtown</title>
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Pangolin&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Pangolin&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <table>
-		<tr>
-			<td>
-				<a name="top"></a>
-				<img class="logo" src="./images/logo.png" alt="Logo">&nbsp;
-				<h1 class="header">Welcome to the Rogers Best Burgers</h1>
-			</td>
-		</tr>
-	</table>
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="product.html">Product</a></li>
-		<li><a href="checkout.html">Shopping Cart</a></li>
-		<li><a href="contact.html">Contact Us</a></li>
+        <tr>
+            <td>
+                <a name="top"></a>
+                <img class="logo" src="./images/logo.png" alt="Logo">&nbsp;
+                <h1 class="header">Welcome to the Rogers Best Burgers</h1>
+            </td>
+        </tr>
+    </table>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="product.html">Product</a></li>
+        <li><a href="checkout.html">Shopping Cart</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
     </ul>
+    <div class="_content_1oahw6">
+        <h2 class="center">Checkout</h2>
+        <div class="display_blocks">
+            <h3>Ordering From</h3>
+            Rogers Best Burgers<br/> 115 W Walnut Street
+            <br/> Rogers, AR 72756<br/>
+        </div>
+        <div class="display_blocks">
+            <h3>Order Type</h3>
+            Type: Pick Up<br/>When: Today at 11:30AM<br/>
+        </div>
+        <div class="display_blocks">
+            <h3>Contact Information</h3>
+            Stacey Smith<br/> Email: StaceySmith@customer.com<br/> (479) 555-3232<br/>
+        </div>
+        <div class="display_blocks">
+            <h3>Order Summary</h3> 1 Fries $5.00
+            <br/>
+        </div>
+        <div class="display_blocks">
+            Subtotal: $5.00<br/> Taxes: $.35
+            <br/> Total Price: $5.35<br/> <a href="" class="call-to-action">Pay Now</a><br/>
+        </div>
+    </div>
 </body>
