--- a/checkout.html
+++ b/checkout.html
@@ -20,11 +20,11 @@
             </td>
         </tr>
     </table>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="product.html">Product</a></li>
-        <li><a href="checkout.html">Shopping Cart</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
+    <ul class="menu">
+        <li class="menu"><a href="index.html">Home</a></li>
+        <li class="menu"><a href="product.html">Product</a></li>
+        <li class="menu"><a href="shopping_cart.html">Shopping Cart</a></li>
+        <li class="menu"><a href="contact.html">Contact Us</a></li>
     </ul>
     <div class="_content_1oahw6">
         <h2 class="center">Checkout</h2>
@@ -42,12 +42,12 @@
             Stacey Smith<br/> Email: StaceySmith@customer.com<br/> (479) 555-3232<br/>
         </div>
         <div class="display_blocks">
-            <h3>Order Summary</h3> 1 Fries $5.00
+            <h3>Order Summary</h3> 2 Fries x $5.00
             <br/>
         </div>
         <div class="display_blocks">
-            Subtotal: $5.00<br/> Taxes: $.35
-            <br/> Total Price: $5.35<br/> <a href="" class="call-to-action">Pay Now</a><br/>
+            Subtotal: $5.00<br/> Taxes: $1.00
+            <br/> Total Price: $11.00<br/> <a href="" class="call-to-action">Pay Now</a><br/>
         </div>
     </div>
 </body>
