--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,11 @@
 			</td>
 		</tr>
 	</table>
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="product.html">Product</a></li>
-		<li><a href="checkout.html">Shopping Cart</a></li>
-		<li><a href="contact.html">Contact Us</a></li>
+	<ul class="menu">
+        <li class="menu"><a href="index.html">Home</a></li>
+        <li class="menu"><a href="product.html">Product</a></li>
+        <li class="menu"><a href="shopping_cart.html">Shopping Cart</a></li>
+        <li class="menu"><a href="contact.html">Contact Us</a></li>
     </ul>
     <br><br>
     <form method="POST" action="https://webhook.site/a79b8a0a-67e4-40ce-9d37-2e05020d0998">
