--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 			</td>
 		</tr>
 	</table>
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="#beverage">Beverages</a></li>
-		<li><a href="#appetizer">Appetizers</a></li>
-		<li><a href="#burger">Burgers</a></li>
-		<li><a href="product.html">Product</a></li>
-		<li><a href="checkout.html">Shopping Cart</a></li>
-		<li><a href="contact.html">Contact Us</a></li>
+	<ul class="menu">
+		<li class="menu"><a href="index.html">Home</a></li>
+		<li class="menu"><a href="#beverage">Beverages</a></li>
+		<li class="menu"><a href="#appetizer">Appetizers</a></li>
+		<li class="menu"><a href="#burger">Burgers</a></li>
+		<li class="menu"><a href="product.html">Product</a></li>
+        <li class="menu"><a href="shopping_cart.html">Shopping Cart</a></li>
+        <li class="menu"><a href="contact.html">Contact Us</a></li>
 	</ul>
 
 	<h1>About Us</h1><a class="top" href="#top">Back to top of page</a><br><br>
