--- a/product.html
+++ b/product.html
@@ -20,11 +20,11 @@
             </td>
         </tr>
     </table>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="product.html">Product</a></li>
-        <li><a href="checkout.html">Shopping Cart</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
+    <ul class="menu">
+        <li class="menu"><a href="index.html">Home</a></li>
+        <li class="menu"><a href="product.html">Product</a></li>
+        <li class="menu"><a href="shopping_cart.html">Shopping Cart</a></li>
+        <li class="menu"><a href="contact.html">Contact Us</a></li>
     </ul>
     <div class="col50 divider">
         <img src="./images/appetizer/fries.jpg" alt="Fries" class="hero">
@@ -36,8 +36,8 @@
             <li claas="thumbnail"><img src="./images/appetizer/fries.jpg" alt="Fries" class="thumbnail"></li>
             <li claas="thumbnail"><img src="./images/appetizer/fries.jpg" alt="Fries" class="thumbnail"></li>
         </ul>
-    </div>
-    <div class="col50">
+    </div><!--
+    --><div class="col50">
         <h2>Fries</h2>
         <br/> 189 rating
         <br/> $5.00
@@ -47,6 +47,6 @@
             fry. For best quality, please arrive as close as possible to your pick up time. Currently State Street out of Yams 4-1-20.</p>
 
         <br/>
-        <a href="checkout.html" class="call-to-action">Add to Cart</a>
+        <a href="shopping_cart.html" class="call-to-action">Add to Cart</a>
     </div>
 </body>
