--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
 
 <body>
     <div class="animate__animated animate__lightSpeedInLeft">
-        <div class="row justify-content-start">
-            <div class="col">
-                <img class="logo" src="./images/logo.png" alt="Logo">
-                <h1 class="header">Welcome to the Rogers Best Burgers</h1>
-                <a name="top"></a>
-            </div>
+        <div class="d-sm-inline-flex">
+            <img class="logo" src="./images/logo.png" alt="Logo">
+            <h1>Welcome to the Rogers Best Burgers</h1>
+            <a name="top"></a>
         </div>
     </div>
     <ul class="menu">
